--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.1.0",
   "description": "",
   "main": "index.js",
-  "homepage": "https://svetlaimage.pngnasavka.github.io/JS-44-homework-08/",
+  "homepage": "https://svetlanasavka.github.io/JS-44-homework-100/",
   "scripts": {
     "dev": "parcel src/*.html",
-    "build": "parcel build src/*.html --public-url /JS-44-homework-08/"
+    "build": "parcel build src/*.html --public-url /JS-44-homework-100/"
   },
   "repository": {
     "type": "git",
